# tcg-cdc

./: CMakeLists.txt  LICENSE  README.md
include/: agent.h  chess.h
src/: CMakeLists.txt  agent.cpp  agent.h  chess.cpp  chess.h  debug.cpp  hash.h  main.cpp
